Fix weird 1x gap in some browsers

--- a/src/components/RightSidebar/TableOfContents.css
+++ b/src/components/RightSidebar/TableOfContents.css
@@ -8,6 +8,7 @@
 	padding-inline: var(--toc-overlap-inline-start) var(--toc-overlap-inline-end);
 	padding-block: 0.75rem;
 	background: var(--theme-bg-gradient);
+	transform: translateY(-1px);
 }
 
 @media (min-width: 50em) {
